--- a/src/JRSoftware.Clientes.Core/JRSoftware.Clientes.Core.csproj
+++ b/src/JRSoftware.Clientes.Core/JRSoftware.Clientes.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="3.1.5" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
+
 </Project>
